Se hizo el grid de la app

--- a/index.html
+++ b/index.html
@@ -3,13 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Time tracking dashboard</title>
 </head>
 <body>
-
+<main>
+  <section class="cards">
+    <div class="card">
+      <div>
+        <img src="" alt="">
+        <p>Report by</p>
+        <h2>Jeremy Robson</h2>
+      </div>
+      <p>Daily</p>
+      <p>Weekly</p>
+      <p>Monthly</p>
+    </div>
+    <div class="card">
+      <img src="" alt="">
+      <div>
+        <h3>Work</h3>
+        <img src="" alt="">
+        <h2></h2>
+        <p>last week - 36hrs</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="" alt="">
+      <div>
+        <h3>Work</h3>
+        <img src="" alt="">
+        <h2></h2>
+        <p>last week - 36hrs</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="" alt="">
+      <div>
+        <h3>Work</h3>
+        <img src="" alt="">
+        <h2></h2>
+        <p>last week - 36hrs</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="" alt="">
+      <div>
+        <h3>Work</h3>
+        <img src="" alt="">
+        <h2></h2>
+        <p>last week - 36hrs</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="" alt="">
+      <div>
+        <h3>Work</h3>
+        <img src="" alt="">
+        <h2></h2>
+        <p>last week - 36hrs</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="" alt="">
+      <div>
+        <h3>Work</h3>
+        <img src="" alt="">
+        <h2></h2>
+        <p>last week - 36hrs</p>
+      </div>
+    </div>
+  </section>
+</main>
   
 </body>
 </html>
