--- a/index.html
+++ b/index.html
@@ -28,12 +28,74 @@
     </div>
 
     <div class="card work">
-      <img src="/images/icon-work.svg" alt="" class="header-icon">
+      <div class="card-icon">
+        <img src="/images/icon-work.svg" alt="" class="header-icon">
+      </div>
       <div class="card-footer">
         <span>Work</span>
         <img src="/images/icon-ellipsis.svg" alt="">
         <span class="card-footer-hrs">32hrs</span>
-        <p>Last week - 36hrs</p>
+        <p class="card-footer-final">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card play">
+      <div class="card-icon">
+        <img src="/images/icon-play.svg" alt="" class="header-icon">
+      </div>
+      <div class="card-footer">
+        <span>Work</span>
+        <img src="/images/icon-ellipsis.svg" alt="">
+        <span class="card-footer-hrs">32hrs</span>
+        <p class="card-footer-final">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card study">
+      <div class="card-icon">
+        <img src="/images/icon-study.svg" alt="" class="header-icon">
+      </div>
+      <div class="card-footer">
+        <span>Work</span>
+        <img src="/images/icon-ellipsis.svg" alt="">
+        <span class="card-footer-hrs">32hrs</span>
+        <p class="card-footer-final">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card exercise">
+      <div class="card-icon">
+        <img src="/images/icon-exercise.svg" alt="" class="header-icon">
+      </div>
+      <div class="card-footer">
+        <span>Work</span>
+        <img src="/images/icon-ellipsis.svg" alt="">
+        <span class="card-footer-hrs">32hrs</span>
+        <p class="card-footer-final">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card social">
+      <div class="card-icon">
+        <img src="/images/icon-social.svg" alt="" class="header-icon">
+      </div>
+      <div class="card-footer">
+        <span>Work</span>
+        <img src="/images/icon-ellipsis.svg" alt="">
+        <span class="card-footer-hrs">32hrs</span>
+        <p class="card-footer-final">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card self">
+      <div class="card-icon">
+        <img src="/images/icon-self-care.svg" alt="" class="header-icon">
+      </div>
+      <div class="card-footer">
+        <span>Work</span>
+        <img src="/images/icon-ellipsis.svg" alt="">
+        <span class="card-footer-hrs">32hrs</span>
+        <p class="card-footer-final">Last week - 36hrs</p>
       </div>
     </div>
   </section>
